--- a/src/index.html
+++ b/src/index.html
@@ -4,23 +4,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Brittany Chiang</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-
+  <title>It's Volodymyr</title>
+  <link rel="stylesheet" href="../dist/styles.css" />
+  <script src="../src/scripts/main.js" defer></script>
+  <!-- defer is called to wait for DOM to fully load and then download js code -->
   <style>
     html {
       scroll-behavior: smooth;
     }
   </style>
-  <style type="text/tailwindcss">
-    @theme {        --color-clifford: #000000;      }    </style>
 </head>
 
-<body class="bg-[#0a192f] text-slate-300 font-sans min-h-screen">
+<body class="bg-[#151515] text-slate-300 font-sans min-h-screen">
   <div class="flex flex-col md:flex-row md:h-screen">
     <!-- Sidebar -->
-    <aside class="w-full md:w-1/2 flex flex-col justify-between md:justify-center md:items-center p-6 md:p-10">
+    <aside class="w-full md:w-1/2 flex flex-col justify-between p-6 md:p-10 items-center">
 
       <div class="max-w-xs w-full md:w-100" style="min-width: 280px;">
         <div class="text-left">
@@ -33,24 +31,53 @@
 
         <nav class="mt-10 space-y-4">
           <a href="#about"
-            class="block border-l-2 pl-4 text-slate-100 font-medium nav-link active border-slate-100">ABOUT</a>
+            class="block border-l-2 pl-4 text-slate-500 nav-link border-transparent text-lg transform scale-90 hover:scale-100 hover:text-slate-300 transition duration-200">ABOUT</a>
           <a href="#experience"
-            class="block border-l-2 pl-4 text-slate-500 nav-link border-transparent hover:text-slate-300">EXPERIENCE</a>
+            class="block border-l-2 pl-4 text-slate-500 nav-link border-transparent text-lg transform scale-90 hover:scale-100 hover:text-slate-300 transition duration-200">EXPERIENCE</a>
           <a href="#projects"
-            class="block border-l-2 pl-4 text-slate-500 nav-link border-transparent hover:text-slate-300">PROJECTS</a>
+            class="block border-l-2 pl-4 text-slate-500 nav-link border-transparent text-lg transform scale-90 hover:scale-100 hover:text-slate-300 transition duration-200">PROJECTS</a>
         </nav>
-      </div>
+        <div class="mt-10 text-slate-500 w-full text-start">
+          <ul class="flex space-x-5">
+            <li class="hover:text-white">
+              <a href="https://github.com/villaclara" title="GitHub" target="_blank">
+                <span>
+                  <svg viewBox="0 0 100 100" fill="currentColor" class="w-6 h-6" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z" />
+                  </svg>
+                </span>
+              </a>
+            </li>
+            <li class="hover:text-white">
+              <a href="https://www.linkedin.com/in/volodymyr-khreptak-ba89ab182/" title="LinkedIn" target="_blank">
+                <span>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="h-6 w-6"
+                    aria-hidden="true">
+                    <path
+                      d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.3 6.5a1.78 1.78 0 01-1.8 1.75zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93A1.74 1.74 0 0013 14.19a.66.66 0 000 .14V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.36.86 3.36 3.66z">
+                    </path>
+                  </svg>
+                </span>
+              </a>
+        </div>
+        </li>
 
-      <div class="flex space-x-4 mt-10 text-slate-500 text-xl">
-        <span>🐙</span><span>💼</span><span>💻</span><span>📷</span><span>📚</span>
+        </ul>
+      </div>
+      <div>
+
+
+        <footer>This website was highly inspired by a beautiful website of Brittany Chiang <a
+            href="https://brittanychiang.com" style="color: blue">brittanychiang.com</a></footer>
       </div>
 
     </aside>
 
 
     <!-- Main Content -->
-    <main class="w-full md:w-1/2 p-6 md:p-10 space-y-20 overflow-y-auto">
-      <section id="about" class="space-y-6">
+    <main class="w-full md:w-1/2 space-y-20 overflow-y-auto">
+      <section id="about" class="space-y-6 first:pt-0">
         <p>
           I’m a developer passionate about crafting accessible, pixel-perfect user interfaces that blend thoughtful
           design with robust engineering.
@@ -81,6 +108,9 @@
           Hyrule searching for
           <span class="text-slate-100 font-medium">Korok seeds</span>.
         </p>
+
+        <p>check out full <a href=../public/cv.pdf class="text-blue-400">resume -></a></p>
+
       </section>
 
       <section id="experience" class="space-y-4">
@@ -112,134 +142,63 @@
             best practices to deliver an
             inclusive user experience.
           </p>
+
         </div>
       </section>
 
       <section id="projects" class="space-y-4">
         <h2 class="text-2xl font-bold text-slate-100">Projects</h2>
-        <div class="border border-slate-700 p-4 rounded">
-          <h3 class="text-lg font-semibold text-slate-100">Spotify Playlist Builder</h3>
-          <p class="text-slate-400">
-            A web app using the Spotify API to create and manage playlists based on mood or genre.
-          </p>
-          <span class="text-green-400 text-sm">React • Node.js • Spotify API</span>
-        </div>
-        <div class="border border-slate-700 p-4 rounded">
-          <h3 class="text-lg font-semibold text-slate-100">Dev Portfolio Template</h3>
-          <p class="text-slate-400">
-            Responsive portfolio starter built with Astro and Tailwind CSS.
-          </p>
-          <span class="text-green-400 text-sm">Astro • Tailwind • Markdown</span>
+        <div class="items-start group space-y-5">
 
-          <p>
-            I’m a developer passionate about crafting accessible, pixel-perfect user interfaces that blend thoughtful
-            design with robust engineering.
-            My favorite work lies at the intersection of design and development, creating experiences that not only look
-            great but are meticulously
-            built for performance and usability.
-          </p>
-          <p>
-            Currently, I'm a Senior Front-End Engineer at
-            <span class="text-slate-100 font-medium">Klaviyo</span>, specializing in accessibility. I contribute to the
-            creation and maintenance of
-            UI components that power Klaviyo’s frontend, ensuring our platform meets web accessibility standards and
-            best practices to deliver an
-            inclusive user experience.
-          </p>
-        </div>
+          <div>
+            <a href="https://google.com">
+              <div
+                class="border border-slate-700 p-4 rounded [&:not(:hover)]:group-hover:opacity-50 hover:bg-gray-800 hover:blur-0">
 
-        <p>
-          I’m a developer passionate about crafting accessible, pixel-perfect user interfaces that blend thoughtful
-          design with robust engineering.
-          My favorite work lies at the intersection of design and development, creating experiences that not only look
-          great but are meticulously
-          built for performance and usability.
-        </p>
-        <p>
-          Currently, I'm a Senior Front-End Engineer at
-          <span class="text-slate-100 font-medium">Klaviyo</span>, specializing in accessibility. I contribute to the
-          creation and maintenance of
-          UI components that power Klaviyo’s frontend, ensuring our platform meets web accessibility standards and best
-          practices to deliver an
-          inclusive user experience.
-        </p>
+                <img src="${product.name}" width=200 height=40 class="flex-shrink-0" />
+                <div>
+                  <h3 class="text-lg font-semibold text-slate-100">Spotify Playlist Builder</h3>
+                  <p class="text-slate-400">
+                    A web app using the Spotify API to create and manage playlists based on mood or genre.
+                  </p>
+                  <span class="text-green-400 text-sm">React • Node.js • Spotify API</span>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div>
+            <a href="https://google.com" target="_blank">
+              <div
+                class="border border-slate-700 p-4 rounded [&:not(:hover)]:group-hover:opacity-50 hover:bg-gray-800 hover:blur-0">
+                <img src="${product.name}" width=200 height=40 class="flex-shrink-0" />
+                <div>
+                  <h3 class="text-lg font-semibold text-slate-100">Dev Portfolio Template</h3>
+                  <p class="text-slate-400">
+                    Responsive portfolio starter built with Astro and Tailwind CSS.
+                  </p>
+                  <span class="text-green-400 text-sm">Astro • Tailwind • Markdown</span>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div
+            class="border border-slate-700 p-4 rounded [&:not(:hover)]:group-hover:opacity-50 hover:bg-gray-800 hover:blur-0">
+            <h3 class="text-lg font-semibold text-slate-100">Spotify Playlist Builder</h3>
+            <p class="text-slate-400">
+              A web app using the Spotify API to create and manage playlists based on mood or genre.
+            </p>
+            <span class="text-green-400 text-sm">React • Node.js • Spotify API</span>
+          </div>
+
+        </div>
       </section>
     </main>
   </div>
 
-  <script>
-    // // Highlight active section link
-    // const sections = document.querySelectorAll("main section");
-    // const navLinks = document.querySelectorAll(".nav-link");
-
-    // window.addEventListener("scroll", () => {
-    //   let current = "";
-    //   sections.forEach((section) => {
-    //     const sectionTop = section.offsetTop;
-    //     if (scrollY >= sectionTop - 100) {
-    //       current = section.getAttribute("id");
-    //     }
-    //   });
-
-    //   navLinks.forEach((link) => {
-    //     link.classList.remove("text-slate-100", "border-slate-100");
-    //     link.classList.add("text-slate-500", "border-transparent");
-    //     if (link.getAttribute("href") === `#${current}`) {
-    //       link.classList.remove("text-slate-500", "border-transparent");
-    //       link.classList.add("text-slate-100", "border-slate-100");
-    //     }
-    //   });
-    // });
-    const main = document.querySelector("main");
-    const sections = main.querySelectorAll("section");
-    const navLinks = document.querySelectorAll(".nav-link");
-
-    function setActiveLink(id) {
-      navLinks.forEach((link) => {
-        if (link.getAttribute("href") === `#${id}`) {
-          link.classList.add("text-slate-100", "border-slate-100");
-          link.classList.remove("text-slate-500", "border-transparent");
-        } else {
-          link.classList.remove("text-slate-100", "border-slate-100");
-          link.classList.add("text-slate-500", "border-transparent");
-        }
-      });
-    }
-
-    main.addEventListener("scroll", () => {
-      let current = "";
-      const scrollPosition = main.scrollTop + main.clientHeight / 3;
-
-      sections.forEach((section) => {
-        const sectionTop = section.offsetTop;
-        const sectionHeight = section.offsetHeight;
-
-        if (scrollPosition >= sectionTop && scrollPosition < sectionTop + sectionHeight) {
-          current = section.getAttribute("id");
-        }
-      });
-
-      if (current) {
-        setActiveLink(current);
-      }
-    });
-
-    navLinks.forEach((link) => {
-      link.addEventListener("click", (e) => {
-        e.preventDefault();
-
-        const targetId = link.getAttribute("href").substring(1);
-        const targetSection = document.getElementById(targetId);
-
-        if (targetSection) {
-          targetSection.scrollIntoView({ behavior: "smooth" });
-          setActiveLink(targetId);
-        }
-      });
-    });
-
-
-  </script>
+  <script src="../public/info/projects.js"></script>
+  <script src="../src/scripts/fetchdata.js"></script>
 </body>
-<footer>This website was highly inspired by a beautiful website of Brittany Chiang <a href="https://brittanychiang.com" style="color: blue">brittanychiang.com</a></footer>
+
 </html>
