try to change path to scripts and others in index

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>It's Volodymyr</title>
   <link rel="stylesheet" href="../dist/styles.css" />
-  <script src="../src/scripts/main.js" defer></script>
+  <script src="./scripts/main.js" defer></script>
   <!-- defer is called to wait for DOM to fully load and then download js code -->
   <style>
     html {
@@ -209,7 +209,7 @@
   </div>
 
   <script src="../public/info/projects.js"></script>
-  <script src="../src/scripts/fetchdata.js"></script>
+  <script src="./scripts/fetchdata.js"></script>
 
   <footer class="block md:hidden text-slate-300 text-sm text-center font-extralight px-3">This website was heavily inspired by the beautiful design of <a
             href="https://brittanychiang.com" title="Brittany Chiang web site" target="_blank" rel="noopener noreferrer"><span class="text-sky-700">brittanychiang.com</span></a>.</footer>
