new cv with link, add favicon, removed highlight oon mobile projects

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>It's Volodymyr</title>
+  <link rel="icon" type="image/x-icon" href="./favicon.ico">
   <link rel="stylesheet" href="../dist/styles.css" />
   <script src="./scripts/main.js" defer></script>
   <!-- defer is called to wait for DOM to fully load and then download js code -->
@@ -97,11 +98,7 @@
           I’m a software engineer who enjoys building all kinds of stuff with C# and the .NET platform. 
         </p>
         <p>  
-         I’ve worked with WPF for desktop apps, ASP.NET Core for web projects, and EF Core for data management — 
-         plus many other tools that make coding enjoyable and efficient. I enjoy exploring the .NET ecosystem, 
-         from async programming to dependency injection and APIs, to build maintainable solutions. 
-         Most of my projects start as personal ideas or helpful tools for friends, 
-         but I always polish them like professional releases.
+         I’ve worked with WPF for desktop apps, ASP.NET Core for web projects, and EF Core for data management — plus many other tools that make coding enjoyable and efficient. I enjoy exploring the .NET ecosystem, from async programming to dependency injection and APIs, to build maintainable solutions. I also develop with Angular and Blazor, creating dynamic, responsive frontends that pair well with my backend expertise. Most of my projects start as personal ideas or helpful tools for friends, but I always polish them like professional releases.
         </p>
         <p>  
           My significant QA experience helps me spot potential bugs quickly and understand where issues might arise 
@@ -110,7 +107,7 @@
 
          <h6 class="text-balance font-bold text-slate-100">Tech I'm using:</h4>
           <div class="gap-2 flex flex-wrap font-light text-sky-400 text-base
-                      [&>span]:border-e-2 [&>span]:border-sky-300 [&>span]:bg-slate-900 [&>span]:pe-2 last:[&>span]:border-e-0">
+                      [&>span]:border-e-2 [&>span]:border-sky-300  [&>span]:pe-2 last:[&>span]:border-e-0">
             <span>.NET</span>
             <span>ASP.NET Core</span>
             <span>Angular</span>
@@ -159,6 +156,7 @@
 
       <section id="projects" class="space-y-4">
         <h2 class="text-2xl font-bold text-slate-100">Projects</h2>
+        <span class="md:hidden text-sm">click on project to view details</span>
         <div class="items-start group space-y-5" id="projectsDiv">
 
           <!-- <div>
