wip projects page. added command and workspace files

--- a/src/index.html
+++ b/src/index.html
@@ -158,49 +158,10 @@
         <h2 class="text-2xl font-bold text-slate-100">Projects</h2>
         <span class="md:hidden text-sm">click on project to view details</span>
         <div class="items-start group space-y-5" id="projectsDiv">
+        </div>
 
-          <!-- <div>
-            <a href="https://google.com">
-              <div
-                class="flex flex-col lg:flex-row space-x-3 border border-slate-700 p-4 rounded [&:not(:hover)]:group-hover:opacity-50 hover:bg-gray-800 hover:blur-0 hover:scale-105 transition duration-200 transform">
-
-                <img src="../public/images/ata_reborn.png" width=180 height=40 class="flex-shrink-0" />
-                <div>
-                  <h3 class="text-lg font-semibold text-slate-100">Spotify Playlist Builder</h3>
-                  <p class="text-slate-400">
-                    A web app using the Spotify API to create and manage playlists based on mood or genre.
-                  </p>
-                  <span class="text-green-400 text-sm">React • Node.js • Spotify API</span>
-                </div>
-              </div>
-            </a>
-          </div>
-
-          <div>
-            <a href="https://google.com" target="_blank">
-              <div
-                class="border border-slate-700 p-4 rounded [&:not(:hover)]:group-hover:opacity-50 hover:bg-gray-800 hover:blur-0 hover:scale-105 transition duration-200 transform">
-                <img src="${product.name}" width=200 height=40 class="flex-shrink-0" />
-                <div>
-                  <h3 class="text-lg font-semibold text-slate-100">Dev Portfolio Template</h3>
-                  <p class="text-slate-400">
-                    Responsive portfolio starter built with Astro and Tailwind CSS.
-                  </p>
-                  <span class="text-green-400 text-sm">Astro • Tailwind • Markdown</span>
-                </div>
-              </div>
-            </a>
-          </div>
-
-          <div
-            class="border border-slate-700 p-4 rounded [&:not(:hover)]:group-hover:opacity-50 hover:bg-gray-800 hover:blur-0 hover:scale-105 transition duration-200 transform">
-            <h3 class="text-lg font-semibold text-slate-100">Spotify Playlist Builder</h3>
-            <p class="text-slate-400">
-              A web app using the Spotify API to create and manage playlists based on mood or genre.
-            </p>
-            <span class="text-green-400 text-sm">React • Node.js • Spotify API</span>
-          </div> -->
-
+        <div>
+          <p>Check out full projects list <a href="./projects.html" class="text-blue-500">here</a>.</p>
         </div>
       </section>
     </main>
