padding in project page

--- a/src/projects.html
+++ b/src/projects.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 
-<body class="bg-[#151515] text-slate-300 font-sans min-h-screen p-6">
+<body class="bg-[#151515] text-slate-300 font-sans min-h-screen px-6 py-10">
     <div class="items-center flex flex-col md:flex-row justify-between">
         <div class="">
             <a href="javascript:history.back()" class="flex items-center hover:text-blue-400 hover:scale-105 transition duration-100">
