my quote and upd projects.js

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,9 @@
           <p class="mt-4 text-slate-400">
             I build desktop and web apps in C# and .NET, mixing clean code with a bit of creative flair.
           </p>
+	<p class="mt-4 text-slate-100">
+            "I like progress — mine and yours."
+          </p>
         </div>
 
         <nav class="mt-10 space-y-4 hidden md:block">
